Fix image and font sizes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-color-primary roboto">
   <header>
-    <nav class="fixed color-white font-size-2_5rem lg-font-size-3rem justify-end p-y-30 p-x-40 bg-color-primary hidden lg-flex">
+    <nav class="fixed color-white font-size-2rem justify-end p-y-30 p-x-40 bg-color-primary hidden lg-flex">
       <a href="">Portofolio</a>
       <a href="#resume">Resume</a>
       <a href="#about">About</a>
@@ -23,17 +23,17 @@
         <img src="./images/maria.png" alt="portrait photo" class="circle-img"/>
       </div>
       <div class="hello-text bg-color-secondary color-white p-20 absolute z-2">
-        <p class="text-center font-size-2rem lg-font-size-2_5rem line-height-2_5rem m-b-8">Hello, I'm</p>
-        <h1 class="text-center bold font-size-2_5rem lg-font-size-3rem line-height-3rem m-b-8">Maria Patriki</h1>
-        <p class="text-center font-size-2rem lg-font-size-2_5rem line-height-3_2rem">and I'm delighted to introduce myself and share my portofolio with you!</p>
+        <p class="text-center font-size-1_7rem m-b-8 light">Hello, I'm</p>
+        <h1 class="text-center bold font-size-2_5rem m-b-8">Maria Patriki</h1>
+        <p class="text-center font-size-1_7rem line-height-2rem light">and I'm delighted to introduce myself and share my portofolio with you!</p>
       </div>
     </div>
 
     <div id="resume" class="content m-b-40">
       <div class="flex lg-row column">
         <div class="lg-half-width full-width color-white p-20 flex column center">
-          <h2 class="bold font-size-2_5rem lg-font-size-3rem line-height-3rem text-center m-b-10">Room service app</h2>
-          <p class="font-size-2rem lg-font-size-2_5rem line-height-2_5rem text-center">
+          <h2 class="bold font-size-2_5rem line-height-3rem text-center m-b-10">Room service app</h2>
+          <p class="font-size-1_7rem line-height-1_7rem text-center light">
             A hotel managing application where the user can make a room reservation or use other hotel services on the fly.
             The user can schedule room service and order his preferred meal at any time of the day from our menu.There is an option to pay online and add a review for the hotel.The design is showcasing the hotel space in combination with the menu.
             The app is easy to use by people of any age and it aims to make your stay as pleasant and convenient as possible.
@@ -55,8 +55,8 @@
           </div>
         </div>
         <div class="lg-half-width full-width color-white p-20 flex column center">
-          <h2 class="bold font-size-2_5rem lg-font-size-3rem line-height-3rem text-center m-b-10">Music Instruments</h2>
-          <p class="font-size-2rem lg-font-size-2_5rem line-height-2_5rem text-center">
+          <h2 class="bold font-size-2_5rem line-height-3rem text-center m-b-10">Music Instruments</h2>
+          <p class="font-size-1_7rem line-height-1_7rem text-center light">
             A must-visit page for every musician who wants to expand his knowledge, learn about known or fewer instruments and see photos and videos
             .Share your love for special instruments by uploading photos, videos, and a description of them.An easy-to-navigate website with friendly colors.
           </p>
@@ -67,8 +67,8 @@
     <div class="content m-b-80">
       <div class="flex lg-row column">
         <div class="lg-half-width full-width color-white p-20 flex column center">
-          <h2 class="bold font-size-2_5rem lg-font-size-3rem line-height-3rem text-center m-b-10">Patriki Ecom</h2>
-          <p class="font-size-2rem lg-font-size-2_5rem line-height-2_5rem text-center">
+          <h2 class="bold font-size-2_5rem line-height-3rem text-center m-b-10">Patriki Ecom</h2>
+          <p class="font-size-1_7rem line-height-1_7rem text-center light">
             A small business website where you can buy their product. Decide what's best for you by reading the details of each product. Take a small taste of their history and their first production.
             Help other people decide by leaving feedback.An approachable website with photos and a description of the business builds a consistent brand identity.
           </p>
@@ -83,11 +83,11 @@
 
     <div id="about" class="content m-b-40">
       <div class="color-white about p-20">
-        <h3 class="font-size-2_5rem lg-font-size-3rem line-height-3rem bold text-center m-b-20">Ui/Ux Designer based in Greece</h3>
-        <p class="font-size-2rem lg-font-size-2_5rem line-height-2_5rem about m-b-20 text-center">
+        <h3 class="font-size-2_5rem line-height-3rem bold text-center m-b-20">Ui/Ux Designer based in Greece</h3>
+        <p class="font-size-1_7rem line-height-1_7rem about m-b-20 text-center light inline">
           With a passion for combining aesthetics and functionality, I strive to design
           interfaces that not only look great but also enhance user satisfaction.
-          <div class="toggle-hidden font-size-2rem lg-font-size-2_5rem line-height-2_5rem about m-b-20 text-center">
+          <div class="toggle-hidden font-size-1_7rem line-height-1_7rem about m-b-20 light">
 
             <p>
               Throughout my career, i have honed my skills in user research, wireframing, and prototyping.
@@ -120,8 +120,8 @@
               create exceptional user experiences together!
             </p>
           </div>
-          <input type="checkbox" id="more" class="more font-size-2rem lg-font-size-2_5rem line-height-2_5rem"></input>
-          <label for="more" class="more-label color-link font-size-2rem lg-font-size-2_5rem line-height-2_5rem"></label>
+          <input type="checkbox" id="more" class="more font-size-1_7rem line-height-1_7rem"></input>
+          <label for="more" class="more-label color-link font-size-1_7rem line-height-1_7rem"></label>
         </p>
       </div>
     </div>
@@ -130,11 +130,10 @@
   <footer class="p-40">
     <div id="contact" class="content">
       <div class="color-white">
-        <h3 class="word-wrap font-size-2_5rem lg-font-size-3rem line-height-3rem bold text-center m-b-20 text-center">
-          <span>mariap241989</span>
-          <span>@gmail.com</span>
+        <h3 class="word-wrap font-size-2rem line-height-2rem bold text-center m-b-20 text-center">
+          <span>mariap241989</span><span>@gmail.com</span>
         </h3>
-        <p class="font-size-2rem lg-font-size-2_5rem line-height-2_5rem about">
+        <p class="font-size-1_7rem line-height-1_7rem about light">
           Feel free to reach out to me if you have any questions or would 
           like to discuss potencial collaborations. Thank you for your time and consideration. 
         </p>
